# dcs-sdk-java

./: README.md
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Interface.h  wakeup.cpp
app/src/main/java/com/baidu/duer/dcs/androidapp/: DcsSampleApplication.java  DcsSampleBaseActivity.java  DcsSampleMainActivity.java  DcsSampleOAuthActivity.java  DcsSampleScreenHtmlActivity.java
app/src/main/java/com/baidu/duer/dcs/androidsystemimpl/: AudioRecordThread.java  HandlerImpl.java  PlatformFactoryImpl.java
app/src/main/java/com/baidu/duer/dcs/api/: IConnectionStatusListener.java
app/src/main/java/com/baidu/duer/dcs/framework/: BaseDeviceModule.java  BaseMultiChannelMediaPlayer.java  CalculateRetryTime.java  DcsClient.java  DcsFramework.java  DcsResponseDispatcher.java  DcsStream.java  DeviceModuleFactory.java  DialogRequestIdHandler.java  IMessageSender.java  IResponseListener.java  PauseStrategyMultiChannelMediaPlayer.java  SimpleResponseListener.java
app/src/main/java/com/baidu/duer/dcs/http/: DcsHttpManager.java  HttpConfig.java  HttpRequestInterface.java  OkHttpMediaType.java  OkHttpRequestImpl.java
app/src/main/java/com/baidu/duer/dcs/systeminterface/: IAlertsDataStore.java  IAudioInput.java  IAudioRecord.java  IHandler.java  (+5 more)
app/src/main/res/drawable/: btn_bg.xml
app/src/main/res/layout/: dcs_sample_activity_main.xml  dcs_sample_activity_oauth.xml  dcs_sample_activity_oauth_login.xml  dcs_sample_activity_screen_html.xml
app/src/main/res/values/: colors.xml  strings.xml
(+144 files in other folders)
